--- a/styles/style.css
+++ b/styles/style.css
@@ -44,13 +44,13 @@ ol {
   display: grid;
   grid-template-columns: 711px 399px;
   grid-template-areas: "result content__details";
-  place-items: end;
   gap: 30px;
   max-width: 1140px;
 }
 
 .result {
   grid-area: result;
+  padding-top: 78px;
 }
 
 .result__video-container {
@@ -77,7 +77,7 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 2;
@@ -111,7 +111,7 @@ ol {
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-  color: rgba(255, 255, 255, 0.7);
+  color: #fff;
   font-family: inherit;
   font-weight: 400;
   font-size: 18px;
@@ -132,7 +132,7 @@ ol {
 }
 
 .search-form__label-text {
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: inherit;
   font-weight: 400;
   font-size: 18px;
 }
@@ -165,9 +165,9 @@ ol {
   justify-content: center;
   align-items: center;
   height: 34px;
-  border: 1px solid #fff;
+  border: 1px solid currentColor;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: inherit;
   font-weight: 700;
   font-size: 18px;
   background-color: transparent;
@@ -218,7 +218,7 @@ ol {
 .content__list-container {
   position: relative;
   max-height: 298px;
-  overflow: hidden auto;
+  overflow: auto;
 }
 
 .content__list {
@@ -249,6 +249,10 @@ ol {
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
   outline-offset: -1px;
+}
+
+.content__card-link:active {
+ background-color: #545050;
 }
 
 .content__card-link_current {
@@ -282,7 +286,7 @@ ol {
 .content__video-card-description {
   display: -webkit-box;
   overflow: hidden;
-  font-family: Fira Sans Condensed, sans-serif;
+  font-family: inherit;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
